<resources>
    <string name="app_name">TalkAi</string>
    <string name="login_text">&#160;&#160;登&#160;录&#160;&#160;</string>
    <string name="register_text">还没有账号？点击注册</string>
    <string name="phone_number">&#160;手&#160;机&#160;号&#160;码&#160;:</string>\
    <string name="verification_number">&#160;验&#160;证&#160;码&#160;:</string>
    <string name="login_text2">&#160;登&#160;&#160;&#160;录&#160;</string>
    <string name="login_text3">&#160;使用ID登录&#160;</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag1">TalkAI，做你最好的英语老师</string>
    <string name="chat">聊天</string>
    <string name="word">单词</string>
    <string name="me">我的</string>
    <string name="about_us">关于我们</string>
    <string name="privatePolicy">隐私政策</string>
    <string name="policyDetail">TalkAI隐私政策核心内容 我们运营的TalkAI练口语APP（版本1.0.0）严格遵循《个人信息保护法》《数据安全法》及GB/T 44588-2024标准，通过本政策向您说明： 信息收集与使用：为提供AI口语对话、视频通话等核心功能，我们需收集用户注册信息（手机号/邮箱）、设备权限（麦克风、摄像头、存储等）及对话内容（用于纠错与模型优化），敏感信息（如人脸特征）经加密处理且需单独授权；非必要信息（如位置数据）仅用于安全风控，用户可随时关闭权限但可能影响功能使用。 数据共享与保护：未经用户同意不向第三方共享敏感数据，但依法需配合监管的情况除外；第三方服务商（如阿里云）仅限技术支持并受保密协议约束；采用加密存储、访问控制及定期审计保障数据安全，未成年人使用需监护人同意 。 用户权利：您可通过设置管理权限、访问/更正个人信息或邮件申请账号注销，匿名化数据可能用于技术改进；注销后账号信息及会员权益不可恢复 。 自动续费规则：连续包月/包年会员需在订阅期结束前24小时通过iOS账户设置取消，否则将自动扣款；扣费顺序为连续包年＞年度会员＞加量包，余额不足可能导致服务中止 。 合规更新：我们可能根据2025年《个人信息保护合规审计管理办法》等法规调整政策，重大变更将通过APP公告通知，继续使用视为接受修订内容  。</string>
    <string name="UserDetail">我们运营的TalkAI练口语APP（最新版本1.0.0）依据《中华人民共和国个人信息保护法》《网络安全法》及GB/T 35273-2020标准制定本协议，明确约定：\n服务接受与账号规则\n用户需通过手机号或邮箱完成实名注册并妥善保管账号信息，账号所有权归平台所有，用户享有有限使用权且不得转让、出租或共享，否则平台有权封禁账号；连续一年未登录的账号可能被自动注销且数据不可恢复 。用户需对账号下所有行为承担法律责任，包括违规内容发布或非法访问等。\n内容权责与行为规范\n用户生成内容（含输入与AI输出）的著作权归属用户，但平台保留为服务优化目的的使用权（如模型训练、安全风控）；禁止上传违法信息（如危害国家安全、淫秽色情内容）或从事数据篡改、病毒传播等危害网络安全的行为，违规者将承担赔偿责任并面临账号回收、司法协助等处置 。\n隐私与数据使用\n为提供语音对话、视频通话等功能，需收集设备权限（麦克风、摄像头）及对话内容，敏感信息经加密处理；数据仅用于核心服务优化，未经用户同意不向第三方共享，但依法配合监管的情况除外 。用户可通过设置管理权限或邮件申请注销账，匿名化数据可能用于技术改进 。\n会员服务与自动续费\n会员订阅含连续包月/包年选项，自动续费需在订阅期结束前24小时通过iOS/Android账户设置取消，否则将自动扣款；扣费顺序为连续包年＞年度会员＞加量包，余额不足可能导致服务中止。会员权益包括无限次对话、多语言支持及语速调节等功能，付费后不支持退款，除非因平台技术故障导致服务不可用。\n免责声明与责任限制\n平台不保证AI输出的绝对准确性，用户应自行判断内容适用性；因网络故障、不可抗力（如自然灾害）导致的服务中断，平台不承担赔偿责任 。未成年人使用需监护人同意，且监护人应监督其遵守协议条款 。\n协议修改与争议解决\n平台有权根据法律法规或业务需求修订协议，重大变更将通过APP公告通知，继续使用视为接受修改 。争议需优先协商解决，协商不成则提交深圳市南山区人民法院诉讼管辖\n。</string>
    <string name="Advice">意见反馈</string>
    <string name="Setting">设置</string>
    <string name="Help">帮助中心</string>
    <string name="vip_function">Vip有什么功能</string>
    <string name="detail_vip">免费用户每天只能发送10条消息，付费会员没有消息限制。免费用户单条消息文字限制为200，付费用户为500，如果AI回复文字量超出限制消息会被截断。</string>
    <string name="word_function">单词记忆功能</string>
    <string name="word_detail">每个会话右上角设置中可以选择是否开启，开启后AI回复消息时会使用您最近标记过的陌生单词来帮助记忆单词。</string>
    <string name="talk_function">发音分析功能</string>
    <string name="talk_detail">使用发音分析功能时，请使用语音输入，系统会将您的语音转译为文字，如果转译结果有误需要手工纠正，发送后系统会将文字和语音一并发送至分析系统来分析语音。分析系统会从 流畅度准确度/完整性给出 评分，并标记出具体哪个单词发音不准确。</string>
    <string name="vip">会员中心</string>
    <string name="vipfunction">开通VIP聊锁所有功能特权</string>
</resources>